[package]
name = "async-await"
version = "0.1.2"
authors = ["Rock Neurotiko <miguelglafuente@gmail.com>"]
license = "MIT"

description = "Just some macros to emulate the Async and Await :)"
repository = "https://github.com/rockneurotiko/async-await"
keywords = ["async", "future", "await", "thread"]

[dependencies]
eventual = "0.1.5"
