[package]
name = "async-await"
version = "0.2.1"
authors = ["Rock Neurotiko <miguelglafuente@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Just some macros to emulate the Async and Await :)"
repository = "https://github.com/rockneurotiko/async-await"
keywords = ["async", "future", "await", "thread"]

[dependencies]
futures = "0.1.1"